added mentions and usage

--- a/options.html
+++ b/options.html
@@ -31,7 +31,10 @@
       -moz-border-radius:4px;
       border-radius:4px;
     }
-
+    .divider{
+      border-bottom:1px solid #ddd;
+      width:100%;
+    }
   </style>
 </head>
 
@@ -46,7 +49,9 @@
   <button onclick='save_folder()'>Save </button>
 
   <span style='clear:both'></span>
-  <div id='footer'>Made by <a href='http://twitter.com/EddieBluh'>EddieBluh</a>.</div>
+  <p>Choose a folder to select your random bookmarks from. The default is the Bookmarks Bar.</p>
+  <div class='divider'></div>
+  <div id='footer'>Made by <a href='http://twitter.com/EddieBluh'>EddieBluh</a>. Icons and Background courtesy of <a href='http://www.graphicrating.com/'>Graphic Rating</a> and <a href="http://subtlepatterns.com/">Subtle Patterns</a></div>
 </div>
 
 </body>
